--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,13 +1,24 @@
-<!DOCTYPE html>
 <html>
 
-<head>
-  <title>Lab Express Basic Authentication</title>
-  <link rel='stylesheet' href='/styles/style.css' />
-</head>
+  <head>
+    <title>Lab Express Basic Authentication</title>
+    <link rel='stylesheet' href='/styles/style.css' />
+  </head>
 
-<body>
-  {{{body}}}
-</body>
+  <body>
+    <nav>
+      <a href='/'>Home</a>
+      {{#if user}}
+        <a href='/main'>Main</a>
+        <a href='/private'>Private</a>
+        <a href='/profile'>Profile</a>
+      {{else}}
+        <a href='/register'>Register</a>
+        <a href='/login'>Login</a>
+      {{/if}}
+    </nav>
+
+    {{{body}}}
+  </body>
 
 </html>
